...
        manager.post("/pedidos", parameters: params, progress: { (progress) in
        }, success: { (task:URLSessionDataTask, response) in
            
            let dictionaryResponse: NSDictionary = response! as! NSDictionary
            print(dictionaryResponse)
            
            let alertController = UIAlertController(title: "Pedido exitoso", message: dictionaryResponse["msg"] as? String, preferredStyle: .alert)
            
            let volverAction = UIAlertAction(title: "Volver a platos", style: .default){ (action: UIAlertAction) in
                self.dismiss(animated: true, completion: nil)
            }
            alertController.addAction(volverAction)
            
            self.present(alertController, animated: true){
            }
...
